fix issue: remove btn covers the content of the alert

--- a/src/app/alert/alert.component.scss
+++ b/src/app/alert/alert.component.scss
@@ -29,14 +29,14 @@
 
 .remove-alert {
     position: absolute;
-    right: 40px;
+    right: 20px;
     top: 50%;
     transform: translateY(-50%);
     color: grey;
 }
 
 .app-alert {
-    padding: 10px 15px;
+    padding: 10px 40px;
     text-align: center;
     box-shadow: 
       0px 1px 1px -2px rgba(0, 0, 0, 0.2), 
